# agentlens

./: Makefile  README.md  pyproject.toml
agentlens/: core.py
tests/: test_core.py
